syntax = "proto2";

enum ID{
	PEDESTRIAN_D  = 1;  // 行人检测
	ILLEGAL_V1    = 2;  // 违章车辆1
	CAMERA_CAL    = 3;  // 超视距视频感知(相机标定信息)
	ROCKFALL_D    = 4;  // 落石/抛撒物检测
	SEEING_D      = 5;  // 能见度检测
	AVAILABLE_AREA= 6;  // 可行驶区域检测	
	OBSTACLE_D    = 7;  // 障碍物检测
}

// 视觉捕捉到的物体类型
enum TYPE{
	HUMAN 	    = 1;	// 人
	VEHICLE	    = 2;	// 车
	MOTORCYCLE  = 3;  	// 摩托车
}

// 单个行人
message Pedestrian {  
	required int32 object_id = 1;			
	required TYPE  object_type = 2;	
	required int32 x = 3;		// 经度
	required int32 y = 4; 		// 纬度
	required int32 camera = 5;	// 哪个相机（1,2,3,4）
	optional int32 if_at_lane = 6;	// 是否在车道
	optional int32 lane_id = 7;	// 车道id
	optional int32 heading = 8;    
} 

// 单个障碍物
message Obstacle {  
	required int32 object_id = 1;			
	required int32 x = 2;		// 经度
	required int32 y = 3;		// 纬度
	required int32 camera = 4;	// 哪个相机（1,2,3,4）
	optional int32 if_at_lane = 5;	// 是否在车道
	optional int32 lane_id = 6;	// 车道id
	optional int32 heading = 7;    
} 

// 单个可行驶区域
message AvailableArea {  
	required int32 object_id = 1;			
	required int32 x1 = 2;		// 第一个点经度
	required int32 y1 = 3;		// 第一个点纬度
	required int32 x2 = 4;		// 第二个点经度
	required int32 y2 = 5;		// 第二个点纬度
	required int32 camera = 6;	// 哪个相机（1,2,3,4）
	optional int32 lane_id = 7;	// 车道id
	optional int32 heading = 8;    
} 


message Base {
	required ID id = 1;
} 

// 行人集合
message Crowd {
	required ID id = 1;
	repeated Pedestrian pedestrian = 2;  
}  

//多个障碍物集合
message Obstacles {
	required ID id = 1;
	repeated Obstacle obstacle = 2;
}

//可行驶区域集合
message AvailableAreas { 
	required ID id = 1;
	repeated AvailableArea area = 2;
}





